<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/video_info_bg"
    android:orientation="vertical"
    android:paddingLeft="5dp"
    android:paddingRight="5dp" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="left|center_vertical"
        android:orientation="horizontal"
        android:visibility="gone"
        android:padding="8dp" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:gravity="right|center_vertical"
            android:minEms="3"
            android:text="@string/video_ower"
            android:textColor="@color/white"
            android:textSize="@dimen/videoinfo_text_size" />

        <cn.com.pyc.drm.widget.MarqueeTextView
            android:id="@+id/dvi_txt_1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.6"
            android:gravity="left|center_vertical"
            android:singleLine="true"
            android:text="Lisa"
            android:textColor="@color/white"
            android:textSize="@dimen/videoinfo_text_size" />
    </LinearLayout>

  

    <View
        android:layout_width="match_parent"
        android:layout_height="1.4px"
        android:visibility="gone"
        android:background="@drawable/line_gray" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="left|center_vertical"
        android:orientation="horizontal"
        android:padding="8dp" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:gravity="right|center_vertical"
            android:minEms="3"
            android:text="@string/video_format"
            android:textColor="@color/white"
            android:textSize="@dimen/videoinfo_text_size" />

        <cn.com.pyc.drm.widget.MarqueeTextView
            android:id="@+id/dvi_txt_2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.6"
            android:gravity="left|center_vertical"
            android:singleLine="true"
            android:text="MP4"
            android:textColor="@color/white"
            android:textSize="@dimen/videoinfo_text_size" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1.4px"
        android:background="@drawable/line_gray" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="left|center_vertical"
        android:orientation="horizontal"
        android:padding="8dp" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:gravity="right|center_vertical"
            android:minEms="3"
            android:text="@string/video_length"
            android:textColor="@color/white"
            android:textSize="@dimen/videoinfo_text_size" />

        <cn.com.pyc.drm.widget.MarqueeTextView
            android:id="@+id/dvi_txt_3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.6"
            android:gravity="left|center_vertical"
            android:singleLine="true"
            android:text="2分钟"
            android:textColor="@color/white"
            android:textSize="@dimen/videoinfo_text_size" />
    </LinearLayout>

</LinearLayout>